# Video-Analysis---Frames-

./: README.md  pyproject.toml
src/: frame_selection.py  object_detection.py  preprocess.py
