[tool.poetry]
name = "video-analysis-assignment"
version = "0.1.0"
description = "An AI engineering assignment for detecting shoppable items in video frames using frame selection and object detection."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-repo/video-analysis-assignment"
repository = "https://github.com/your-repo/video-analysis-assignment"
keywords = ["video-analysis", "AI", "object-detection", "frame-selection"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = ">=2.1.0"
torchvision = ">=0.16.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
ultralytics = "^8.0.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
